Remove specs bundles